+correct layout issues with login

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,3 +118,5 @@ input[type=submit]{
 textarea {
   height: 120px;
 }
+.logout-right {
+}
